--- a/app/views/stripe_prices/show.html.haml
+++ b/app/views/stripe_prices/show.html.haml
@@ -22,4 +22,4 @@
     = number_to_currency(@stripe_price.amount)
   = link_to 'Edit', [:edit, @daycare, @stripe_price]
   |
-  \#{link_to 'Back', [@daycare, :stripe_prices]}
+  \#{link_to 'Back', [:dashboard, :daycares]}
