--- a/app/views/daycares/guardian_dashboard.html.haml
+++ b/app/views/daycares/guardian_dashboard.html.haml
@@ -1,5 +1,5 @@
 #daycare.container.dashboard
-  .row
+  .row.mb-4
     .col-12.bg-primary.rounded.text-center.my-3.text-light
       %h1.py-4
         Welcome to #{current_user.daycare.name}, #{current_user.first_name}!
@@ -54,6 +54,22 @@
                     %h5.card-title= picture.title
                     = link_to "View", [@daycare, picture], class: "btn btn-primary text-light mt-3 me-2"
           = link_to "View More", [@daycare, :pictures], class: "btn btn-primary btn-lg text-light"
+    #documents.col-md-6
+      .card
+        .card-header
+          %h2.card-title Documents
+        .card-body
+          .row.row-cols-1.row-cols-lg-2.g-4.mb-3
+            - current_user.documents.order(updated_at: :desc).last(4).each do |document|
+              .col
+                .card
+                  = image_tag(document.document.variant(resize_to_fill: [315, 315, gravity: 'center']), class: "card-img-top" ) if document.document.image?
+                  .card-body
+                    %h5.card-title= document.title
+                    = link_to "View Details", [@daycare, document], class: "btn btn-primary text-light mt-3 me-2"
+                    = link_to "Preview", rails_blob_path(document.document, disposition: 'preview'), class: "btn btn-primary text-light mt-3"
+                    = link_to "Download", rails_blob_path(document.document, disposition: 'attachment'), class: "btn btn-secondary text-light mt-3"
+          = link_to "View More", [@daycare, :documents], class: "btn btn-primary btn-lg text-light"
   .row
     #messages.col-md-6
       .card
