--- a/app/views/daycares/provider_dashboard.html.haml
+++ b/app/views/daycares/provider_dashboard.html.haml
@@ -91,7 +91,19 @@
           .card-header
             %h2.card-title Documents
           .card-body
-            .btn.btn-lg.btn-danger.text-light Upload Document      
+            .row.row-cols-1.row-cols-lg-2.g-4.mb-3
+              - @daycare.documents.order(updated_at: :desc).last(4).each do |document|
+                .col
+                  .card
+                    = image_tag(document.document.variant(resize_to_fill: [315, 315, gravity: 'center']), class: "card-img-top" ) if document.document.image?
+                    .card-body
+                      %h5.card-title= document.title
+                      = link_to "View Details", [@daycare, document], class: "btn btn-primary text-light mt-3 me-2"
+                      = link_to "Edit", [:edit, @daycare, document], class: "btn btn-secondary text-light mt-3"
+                      = link_to "Preview", rails_blob_path(document.document, disposition: 'preview'), class: "btn btn-primary text-light mt-3"
+                      = link_to "Download", rails_blob_path(document.document, disposition: 'attachment'), class: "btn btn-secondary text-light mt-3"
+            = link_to "Upload Document", [:new, @daycare, :document], class: "btn btn-danger btn-lg text-light"
+            = link_to "View More", [@daycare, :documents], class: "btn btn-primary btn-lg text-light"
     .row.mb-4
       #messages.col-md-6
         .card
