--- a/app/views/documents/show.html.haml
+++ b/app/views/documents/show.html.haml
@@ -15,6 +15,11 @@
             %ul.list-group.list-group-flush
               - @document.users.each do |user|
                 %li.list-group-item= link_to user.name, [@daycare, user]
-          = link_to "Preview", rails_blob_path(@document.document, disposition: 'preview'), class: "btn btn-primary text-light mt-3"
-          = link_to "Download", rails_blob_path(@document.document, disposition: 'attachment'), class: "btn btn-secondary text-light mt-3"
-          = link_to "Edit", [:edit, @daycare, @document], class: "btn btn-secondary text-light mt-3" if policy(@document).edit?
+          = link_to "Preview Original Document", rails_blob_path(@document.document, disposition: 'preview'), class: "btn btn-primary text-light mt-3"
+          = link_to "Download Original Document", rails_blob_path(@document.document, disposition: 'attachment'), class: "btn btn-secondary text-light mt-3"
+          - if @document.response_document.attached?
+            = link_to "Preview Response Document", rails_blob_path(@document.response_document, disposition: 'preview'), class: "btn btn-primary text-light mt-3"
+            = link_to "Download Response Document", rails_blob_path(@document.response_document, disposition: 'attachment'), class: "btn btn-secondary text-light mt-3"
+          - edit_text = current_user.provider? ? "Edit" : "Upload Response Document"
+          %div
+            = link_to edit_text, [:edit, @daycare, @document], class: "btn btn-secondary text-light mt-3" if policy(@document).edit?
