--- a/app/views/daycares/guardian_dashboard.html.haml
+++ b/app/views/daycares/guardian_dashboard.html.haml
@@ -82,3 +82,10 @@
         .card-header
           %h2.card-title Forms
         .card-body
+          %ul.list-group.list-group-flush.mb-3
+            - current_user.viewable_forms.last(8).each do |form|
+              - entered_form = current_user.entered_forms.find_by(form_id: form.id)
+              - if entered_form.present?
+                %li.list-group-item= link_to form.title, [@daycare, entered_form]
+              - else
+                %li.list-group-item= link_to form.title, new_daycare_entered_form_path(daycare_id: @daycare.id, form_id: form.id)
