--- a/app/views/daycares/provider_dashboard.html.haml
+++ b/app/views/daycares/provider_dashboard.html.haml
@@ -119,7 +119,7 @@
             %ul.list-group.list-group-flush.mb-3
               - @daycare.forms.last(8).each do |form|
                 %li.list-group-item= link_to form.title, [@daycare, form]
-            .btn.btn-lg.btn-danger.text-light Add Form
+            = link_to "Add Form", [:new, @daycare, :form], class: "btn btn-danger btn-lg text-light"
 - else
   .d-flex.h-100.text-center.text-white.bg-primary.cover-theme
     .cover-container.d-flex.w-100.h-100.p-3.mx-auto.flex-column
