--- a/app/views/form_fields/_simple_field.haml
+++ b/app/views/form_fields/_simple_field.haml
@@ -4,5 +4,5 @@
     = form_fields_form.input :field_kind, as: :hidden
     = form_fields_form.input :question
     = form_fields_form.input :description
-    = form_fields_form.input :order
+    = form_fields_form.input :position
     = form_fields_form.input :required
