--- a/app/views/picture_mailer/picture_message.text.haml
+++ b/app/views/picture_mailer/picture_message.text.haml
@@ -1,1 +1,1 @@
-= "Your child, #{@child_name}, has had a photo added of them on Teensy Bit. #{link_to 'Check it out!', [@picture.daycare, @picture]}"
+= "Your child, #{@child_name} has had a photo added of them on Teensy Bit from #{@picture.daycare.name}. #{link_to 'Check it out!', [@picture.daycare, @picture]}"
