--- a/app/views/forms/_form.html.haml
+++ b/app/views/forms/_form.html.haml
@@ -20,5 +20,6 @@
         = link_to "Add Form Field", "#", class: "btn btn-primary mt-3", data: { action: "click->nested-form#addAssociation" }
     = f.input :published_to_daycare, as: :boolean, hint: " Allow all parents to view this form"
     = f.association :users, collection: current_user.owned_daycare.users, prompt: "Share To Parents"
-    = f.submit "Save", class: "btn btn-primary mt-3"
+    .col-auto
+      = f.submit "Save", class: "btn btn-primary mt-3"
   = link_to "Delete", [@daycare, @form], method: :delete, class: "btn btn-danger text-light mt-5", data: { confirm: "Are you sure?"} if @form.persisted?
