--- a/app/views/documents/_form.html.haml
+++ b/app/views/documents/_form.html.haml
@@ -1,4 +1,4 @@
-- action_text = @document.persisted? ? "Edit Document" : "Add Document"
+-# - action_text = @document.persisted? ? "Edit Document" : "Add Document"
 .container
   %h1= action_text
   = simple_form_for([@daycare, @document]) do |f|
