--- a/app/views/messages/_form.html.haml
+++ b/app/views/messages/_form.html.haml
@@ -1,6 +1,6 @@
 - chat ||= @chat
 .container
-  = simple_form_for([daycare, chat, message]) do |f|
+  = simple_form_for([daycare, chat, message], data: { controller: "reset-form", action: 'turbo:submit-end->reset-form#reset' }) do |f|
     = f.input :recipient_id, as: :hidden
     = f.input :chat_id, as: :hidden
     = f.input :message_body
