--- a/app/views/daycares/provider_dashboard.html.haml
+++ b/app/views/daycares/provider_dashboard.html.haml
@@ -113,7 +113,9 @@
             %ul.list-group.list-group-flush.mb-3
               - @daycare.users.each do |user|
                 - if user.as_guardian_chat.present? 
-                  %li.list-group-item= link_to "Message #{user.name}", [@daycare, user.as_guardian_chat]
+                  %li.list-group-item
+                    %span= link_to "Message #{user.name}", [@daycare, user.as_guardian_chat]
+                    %span.badge.bg-danger.ms-2= user.as_guardian_chat.unread_messages_count(current_user)
                 - else
                   %li.list-group-item= button_to "Message #{user.name}", [@daycare, :chats], params: { chat: { guardian_id: user.id } }
 
