--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -2,7 +2,7 @@
   .row.py-lg-5
     .col-lg-6.col-md-8.mx-auto.light-grey-transparent.px-3.py-5.rounded
       %h1.fw-light.text-white Teensy Bit
-      %p.lead.text-light Replaces your hodge-podge of online tools to run your at home daycare.
+      %p.lead.text-light Replaces your hodge-podge of online tools to run your in home daycare.
       %p
         %button.btn.btn-danger.text-light{"data-bs-target" => "#email-sign-up-get_started", "data-bs-toggle" => "modal", :type => "button"}
           Get Started
@@ -43,10 +43,10 @@
       #payments.row.featurette
         .col-md-7
           %h2.featurette-heading
-            Auto Payments  Invoicing.
+            Auto Payments.
             %span.text-muted Keep your bank account full.
           %p.lead Never have a missed or late payment again. You will be able to set all your parents up on an automatic daycare payment schedule that will save you time and ensure you get your hard earned dollars into your account. If auto payments aren't for you, then we will send invoices for you, and reminders via many communication channels to ensure you get your payments.
-          .w-100.mb-3.btn.btn-lg-btn-primary= link_to "Start Free Trial", :root, anchor: "pricing"
+          .w-100.mb-3.btn.btn-lg-btn-primary= link_to "Start Free Trial", "/#pricing"
         .col-md-5.xl-font.d-inline-flex.align-items-center.justify-content-center
           = image_tag("paying-online", class: "img-fluid featurette-image mx-auto")
       %hr.featurette-divider
@@ -56,17 +56,17 @@
               Online Paperwork.
               %span.text-muted Save yourself headaches.
             %p.lead There are so many forms that parents need to read, sign, and for you to keep up on. Create these in the app so it will keep up on them automatically for you, and make them available wherever the internet is!
-            .w-100.mb-3.btn.btn-lg-btn-primary= link_to "Start Free Trial", :root, anchor: "pricing"
+            .w-100.mb-3.btn.btn-lg-btn-primary= link_to "Start Free Trial", "/#pricing"
           .col-md-5.xl-font.d-inline-flex.align-items-center.justify-content-center.order-md-1
             = image_tag("online-paper-work", class: "img-fluid featurette-image mx-auto")
         %hr.featurette-divider
           #sharing.row.featurette
             .col-md-7
               %h2.featurette-heading
-                Photo  file sharing.
+                Photo & file sharing.
                 %span.text-muted Easy for you, and parents love it!
               %p.lead Take a photo, tag the kids in it, done. Its now automatically shared and available to the parents it may concern. Do this with any document or text you may need to share with parents. Easy, simple and saves you time and makes parents happy!
-            .w-100.mb-3.btn.btn-lg-btn-primary= link_to "Start Free Trial", :root, anchor: "pricing"
+              .w-100.mb-3.btn.btn-lg-btn-primary= link_to "Start Free Trial", "/#pricing"
             .col-md-5.xl-font.d-inline-flex.align-items-center.justify-content-center
               = image_tag("kid-taking-photo", class: "img-fluid featurette-image mx-auto")
           %hr.featurette-divider
@@ -76,7 +76,7 @@
                   Messaging.
                   %span.text-muted Broadcast, instant message and text.
                 %p.lead Often you need to message all your parents in your daycare, or a select group of them. This makes it easy to message them via email, text or in-app messages. Set up automatic messages to remind parents to bring supplies or simply let them know how their kid is doing. All in one place. Easy.
-              .w-100.mb-3.btn.btn-lg-btn-primary= link_to "Start Free Trial", :root, anchor: "pricing"
+                .w-100.mb-3.btn.btn-lg-btn-primary= link_to "Start Free Trial", "/#pricing"
               .col-md-5.xl-font.d-inline-flex.align-items-center.justify-content-center.order-md-1
                 = image_tag("messaging", class: "img-fluid featurette-image mx-auto")
             %hr.featurette-divider
